<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:fitsSystemWindows="true"
    tools:context="com.uqac.wesplit.ModificationDepenseActivity"
    android:descendantFocusability="beforeDescendants"
    android:focusableInTouchMode="true">

    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar_modification_depense"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="?attr/colorPrimary"
        android:theme="@style/ThemeOverlay.AppCompat.ActionBar"
        app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
        app:elevation="0dp">

        <ImageButton
            android:id="@+id/btn_depense_retour"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@mipmap/ic_arrow_back_white_24dp"
            android:background="@color/colorPrimary"
            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="30dp"
            android:text="Modifier la dépense"
            android:textColor="@color/white"
            android:textSize="18dp"/>

    </android.support.v7.widget.Toolbar>

    <ScrollView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/toolbar_modification_depense"
        android:id="@+id/scrollView2">
        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="vertical"
            android:padding="@dimen/activity_horizontal_margin"
            android:paddingBottom="0dp">

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/depense_titre"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/hint_nomdepense"
                    android:layout_marginBottom="10dp"
                    android:inputType="text" />

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/depense_montant"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="0dp"
                    android:hint="@string/hint_montant"
                    android:inputType="numberDecimal" />

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <EditText
                    android:id="@+id/depense_date"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="0dp"
                    android:hint="@string/quantit"
                    android:inputType="numberDecimal" />

            </android.support.design.widget.TextInputLayout>

            <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView
                android:layout_width="wrap_content"
                android:textSize="16dp"
                android:layout_height="wrap_content"
                android:text="Catégorie"
                android:layout_marginRight="20dp"/>
            <Spinner
                android:id="@+id/depense_categorie"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"/>
        </LinearLayout>

            <Button
                android:id="@+id/btn_modification_depense"
                android:layout_width="fill_parent"
                android:layout_marginTop="0dip"
                android:layout_height="60dip"
                android:text="@string/btn_modification_depense"
                android:stateListAnimator="@null" />

            <Button
                android:id="@+id/btn_suppression_depense"
                android:layout_width="fill_parent"
                android:layout_marginTop="5dip"
                android:layout_height="60dip"
                android:text="@string/btn_suppression_depense"
                android:stateListAnimator="@null" />
        </LinearLayout>
    </ScrollView>

</RelativeLayout>